added detail to projects

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ document.addEventListener('DOMContentLoaded', function () {
           </div>
           <div class="panel">
               <p class=>Periodical is an interactive news platform that empowers news consumers in their local communities.
-                This digital platform gives readers a way to make a difference with a robust program for community engagement.</p>
+                This digital platform gives readers a way to make a difference with a robust program for community engagement.<br><br>Designed with Stephanie Waldrop, Melissa Takai, and Evita Wijaya.</p>
               <img src="images/periodical-pic.png">
           </div>
           <div class="accordion">
@@ -120,7 +120,7 @@ document.addEventListener('DOMContentLoaded', function () {
             <div class="carrot"><img src="images/carrot.svg"></div>
           </div>
           <div class="panel">
-            <p>Not only does Chord provide a way to revisit sounds but it allows you to share them with others. Each recording that exists within a Chord card can be given to someone else and remind them of a new sight, a new sound, and a new person.</p>
+            <p>Not only does Chord provide a way to revisit sounds but it allows you to share them with others. Each recording that exists within a Chord card can be given to someone else and remind them of a new sight, a new sound, and a new person.<br><br>Designed with Lily Liu, Sasha Noerdin, and Emily Wang.</p>
             <img src="images/chord-pic.png">
           </div>
       </div>
