Updated ticker content

--- a/milo.html
+++ b/milo.html
@@ -56,20 +56,20 @@
         <div class="ticker-wrap">
             <div class="ticker">
               <span class="item-collection-1">
-                <span class="item">Don't forget to be kind!</span>
-                <span class="item">Don't forget to be kind!</span>
-                <span class="item">Don't forget to be kind!</span>
-                <span class="item">Don't forget to be kind!</span>
-                <span class="item">Don't forget to be kind!</span>
-                <span class="item">Don't forget to be kind!</span>
+                <span class="item">Coded + designed from scratch!</span>
+                <span class="item">Coded + designed from scratch!</span>
+                <span class="item">Coded + designed from scratch!</span>
+                <span class="item">Coded + designed from scratch!</span>
+                <span class="item">Coded + designed from scratch!</span>
+                <span class="item">Coded + designed from scratch!</span>
               </span>
               <span class="item-collection-2">
-                <span class="item">Don't forget to be kind!</span>
-                <span class="item">Don't forget to be kind!</span>
-                <span class="item">Don't forget to be kind!</span>
-                <span class="item">Don't forget to be kind!</span>
-                <span class="item">Don't forget to be kind!</span>
-                <span class="item">Don't forget to be kind!</span>
+                <span class="item">Coded + designed from scratch!</span>
+                <span class="item">Coded + designed from scratch!</span>
+                <span class="item">Coded + designed from scratch!</span>
+                <span class="item">Coded + designed from scratch!</span>
+                <span class="item">Coded + designed from scratch!</span>
+                <span class="item">Coded + designed from scratch!</span>
               </span>
             </div>
           <div>
