added figma stalker and fade in load

--- a/index.html
+++ b/index.html
@@ -123,6 +123,16 @@ document.addEventListener('DOMContentLoaded', function () {
             <p>Not only does Chord provide a way to revisit sounds but it allows you to share them with others. Each recording that exists within a Chord card can be given to someone else and remind them of a new sight, a new sound, and a new person.<br><br>Designed with Lily Liu, Sasha Noerdin, and Emily Wang.</p>
             <img src="images/chord-pic.png">
           </div>
+          <div class="accordion">
+            <div class="grid-item1">Figma Stalker</div>
+            <div class="grid-item2">Recreating the experience of being followed in Figma.</div>
+            <div class="grid-item3">Front-End Development & Design</div>
+            <div class="carrot"><img src="images/carrot.svg"></div>
+          </div>
+          <div class="panel">
+                <p>This was a fun project I did inspired by my love of popping into Figma files and saying hi to people using cursor chat. Users are able to click and drag my favorite memes on the canvas and each refresh provides a new message from your friendly Figma stalker. Click <a href="https://figmastalker.netlify.app/">here</a> to be followed!</p>
+                <img src="images/figma-stalker.png">
+        </div>
       </div>
       </div>
     </div>
