added lazy load

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ document.addEventListener('DOMContentLoaded', function () {
         <h1 id="intro" class="mobile">Nice to meet you, I'm a user experience & visual designer based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>.</h1>
         <section class="projects">
             <div class="tiles">
-                <a href="antologi.html"><img src="images/antologi-pic.png"></a>
+                <a href="antologi.html"><img src="images/antologi-pic.png" loading="lazy"></a>
                 <div class="tile-text">
                     <p class="gray">Antologi</p>
                     <p>A startup in Google's Area 120 incubator focused on promoting better async work for people by using ML to synthesize meeting recordings.</p>
@@ -53,7 +53,7 @@ document.addEventListener('DOMContentLoaded', function () {
             </div>
             <div class="tiles">
               <div class="confidential-container">
-                <img src="images/microsoft-pic.png">
+                <img src="images/microsoft-pic.png" loading="lazy">
                 <p class="top-right">Confidential</p>
               </div>
               <div class="tile-text">
@@ -62,28 +62,28 @@ document.addEventListener('DOMContentLoaded', function () {
                   </div>
             </div>
             <div class="tiles">
-              <a href="caregoals.html"><img src="images/caregoals-pic.png"></a>
+              <a href="caregoals.html"><img src="images/caregoals-pic.png" loading="lazy"></a>
               <div class="tile-text">
                 <p class="gray">Care Goals Guide</p>
                   <p>Creating a way for patients with cancer to feel supported in goals of care discussions with their clinician.</p>
                   </div>
           </div>
           <div class="tiles">
-            <a href="mixedreality.html"><img src="images/mrdd-pic.png"></a>
+            <a href="mixedreality.html"><img src="images/mrdd-pic.png" loading="lazy"></a>
             <div class="tile-text">
               <p class="gray">Mixed Reality Developer Program</p>
                 <p>Developing signage and brand material for Mixed Reality Developer Program and Mixed Reality Dev Days, a Microsoft hackathon.</p>
                 </div>
           </div>
           <div class="tiles">
-            <a href="milo.html"><img src="images/milo-pic.png"></a>
+            <a href="milo.html"><img src="images/milo-pic.png" loading="lazy"></a>
             <div class="tile-text">
               <p class="gray">Milo Treats</p>
                   <p>A brand identity for a DTC pet health startup that develops supplements bespoke to your pup and their individual needs.</p>
                   </div>
           </div>
           <div class="tiles">
-            <a href="acnh.html"><img src="images/acnh-pic.png"></a>
+            <a href="acnh.html"><img src="images/acnh-pic.png" loading="lazy"></a>
             <div class="tile-text">
               <p class="gray">Animal Crossing Checklist</p>
                 <p>Coding a site that provides Animal Crossing New Horizons players with the ability to track their fish, bug, and sea creature progress.</p>
