--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ document.addEventListener('DOMContentLoaded', function () {
             <div class="carrot"><img src="images/carrot.svg"></div>
           </div>
           <div class="panel">
-                <p>This was a fun project I did inspired by my love of popping into Figma files and saying hi to people using cursor chat. Users are able to click and drag my favorite memes on the canvas and each refresh provides a new message from your friendly Figma stalker. Click <a href="https://figmastalker.netlify.app/">here</a> to be followed!</p>
+                <p>This was a fun project I did inspired by my love of popping into Figma files and saying hi to people using cursor chat. Users are able to click and drag my favorite memes on the canvas and each refresh provides a new message from your friendly Figma stalker. Click <a href="https://figmastalker.netlify.app/" target="_blank">here</a> to be followed!</p>
                 <img src="images/figma-stalker.png">
         </div>
       </div>
