switch to inter from dm mono

--- a/milo.html
+++ b/milo.html
@@ -56,21 +56,21 @@
         <div class="ticker-wrap">
             <div class="ticker">
               <span class="item-collection-1">
-                <span class="item">Coded + designed from scratch!</span>
-                <span class="item">Coded + designed from scratch!</span>
-                <span class="item">Coded + designed from scratch!</span>
-                <span class="item">Coded + designed from scratch!</span>
-                <span class="item">Coded + designed from scratch!</span>
-                <span class="item">Coded + designed from scratch!</span>
-              </span>
+                <span class="item">Coded & designed with ♥</span>
+                <span class="item">Coded & designed with ♥</span>
+                <span class="item">Coded & designed with ♥</span>
+                <span class="item">Coded & designed with ♥</span>
+                <span class="item">Coded & designed with ♥</span>
+                <span class="item">Coded & designed with ♥</span>
+            </span>
               <span class="item-collection-2">
-                <span class="item">Coded + designed from scratch!</span>
-                <span class="item">Coded + designed from scratch!</span>
-                <span class="item">Coded + designed from scratch!</span>
-                <span class="item">Coded + designed from scratch!</span>
-                <span class="item">Coded + designed from scratch!</span>
-                <span class="item">Coded + designed from scratch!</span>
-              </span>
+                <span class="item">Coded & designed with ♥</span>
+                <span class="item">Coded & designed with ♥</span>
+                <span class="item">Coded & designed with ♥</span>
+                <span class="item">Coded & designed with ♥</span>
+                <span class="item">Coded & designed with ♥</span>
+                <span class="item">Coded & designed with ♥</span>
+            </span>
             </div>
           <div>
     </body>
