--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ document.addEventListener('DOMContentLoaded', function () {
                     <a href="mailto:tsuishelley@gmail.com">Email</a>
                     </div>
                     <div>
-                      <a href="index.html">Works</a>
+                      <a href="/">Works</a>
                   </div>
                     </section>
             </nav>
