--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Shelley Tsui</title>
-        <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
-        <link rel="icon" type="image/x-icon" href="images/favicon.png">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta property="og:image" content="https://raw.githubusercontent.com/tsuishelley/portfolio/main/images/og-image.png"/>
-    </head>
-    <body>
-    <script>
+<head>
+    <meta charset="utf-8">
+    <title>Shelley Tsui</title>
+    <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:image" content="https://raw.githubusercontent.com/tsuishelley/portfolio/main/images/og-image.png"/>
+</head>
+<body>
+<script>
 document.addEventListener('DOMContentLoaded', function () {
     var acc = document.getElementsByClassName("accordion");
     for (var i = 0; i < acc.length; i++) {
@@ -23,24 +23,53 @@ document.addEventListener('DOMContentLoaded', function () {
             }
         });
     }
+
+    // Function to set the theme
+    function setTheme(theme) {
+        const carrotImgs = document.querySelectorAll('.carrot img');
+        if (theme === 'dark') {
+            document.body.classList.add('dark-mode');
+            toggleButton.innerHTML = '<img src="assets/light-mode.svg">';
+            carrotImgs.forEach(img => img.src = 'images/carrot-dark.svg');
+        } else {
+            document.body.classList.remove('dark-mode');
+            toggleButton.innerHTML = '<img src="assets/dark-mode.svg">';
+            carrotImgs.forEach(img => img.src = 'images/carrot.svg');
+        }
+    }
+
+    // Dark mode toggle functionality
+    const toggleButton = document.getElementById('theme-toggle');
+    toggleButton.addEventListener('click', function() {
+        let theme = document.body.classList.contains('dark-mode') ? 'light' : 'dark';
+        setTheme(theme);
+        localStorage.setItem('theme', theme);
+    });
+
+    // Apply the theme on initial load
+    const savedTheme = localStorage.getItem('theme') || 'light';
+    setTheme(savedTheme);
 });
-    </script>
-    <div class="main">
-        <header>
-            <nav>
-                <section class="navigation">
-                    <div>
-                        <a href="assets/tsui-shelley-resume.pdf" target="_blank">Resume</a>
-                    </div>
-                    <div>
-                    <a href="mailto:tsuishelley@gmail.com">Email</a>
-                    </div>
-                    <div>
-                      <a href="/">Works</a>
-                  </div>
-                    </section>
-            </nav>
-        </header>
+</script>
+<div class="main">
+    <header>
+        <nav>
+            <section class="navigation">
+                <div>
+                    <a href="assets/tsui-shelley-resume.pdf" class = "hover-underline-animation" target="_blank">Resume</a>
+                </div>
+                <div>
+                    <a href="mailto:tsuishelley@gmail.com" class = "hover-underline-animation">Email</a>
+                </div>
+                <div>
+                    <a href="/" class = "hover-underline-animation">Works</a>
+                </div>
+                <div>
+                    <button id="theme-toggle" class = "hover-underline-animation"><img src="assets/light-mode.svg"></button>
+                </div>
+            </section>
+        </nav>
+    </header>
         <h1 id="intro" class="desktop">Hi there, I'm a user experience & visual designer based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. I'm versed in front-end development, design, and <a href="https://www.youtube.com/watch?v=z3U0udLH974" target="_blank" class="italic-blue" id="cats">cats</a>.</h1>
         <h1 id="intro" class="mobile">Nice to meet you, I'm a user experience & visual designer based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>.</h1>
         <section class="projects">
