--- a/milo.html
+++ b/milo.html
@@ -1,31 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Milo</title>
-        <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
-        <link rel="icon" type="image/x-icon" href="images/favicon.png">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta property="og:image" content="https://raw.githubusercontent.com/tsuishelley/portfolio/main/images/og-image.png"/>
+<head>
+    <meta charset="utf-8">
+    <title>Shelley Tsui</title>
+    <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:image" content="https://raw.githubusercontent.com/tsuishelley/portfolio/main/images/og-image.png"/>
+</head>
+<body>
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+    var acc = document.getElementsByClassName("accordion");
+    for (var i = 0; i < acc.length; i++) {
+        acc[i].addEventListener("click", function() {
+            this.classList.toggle("active");
+            var panel = this.nextElementSibling;
+            if (panel.style.maxHeight) {
+                panel.style.maxHeight = null;
+            } else {
+                panel.style.maxHeight = panel.scrollHeight + "px";
+            }
+        });
+    }
 
-    </head>
-    <body>
-        <div class="main">
-        <header>
-            <nav>
-                <section class="navigation">
-                    <div>
-                        <a href="assets/tsui-shelley-resume.pdf" target="_blank">Resume</a>
-                    </div>
-                    <div>
-                    <a href="mailto:tsuishelley@gmail.com">Email</a>
-                    </div>
-                    <div>
-                      <a href="index.html">Works</a>
-                  </div>
-                    </section>
-            </nav>
-        </header>
+    // Function to set the theme
+    function setTheme(theme) {
+        if (theme === 'dark') {
+            document.body.classList.add('dark-mode');
+            toggleButton.innerHTML = '<img src="assets/light-mode.svg">';
+        } else {
+            document.body.classList.remove('dark-mode');
+            toggleButton.innerHTML = '<img src="assets/dark-mode.svg">';
+        }
+    }
+
+    // Dark mode toggle functionality
+    const toggleButton = document.getElementById('theme-toggle');
+    toggleButton.addEventListener('click', function() {
+        let theme = document.body.classList.contains('dark-mode') ? 'light' : 'dark';
+        setTheme(theme);
+        localStorage.setItem('theme', theme);
+    });
+
+    // Apply the theme on initial load
+    const savedTheme = localStorage.getItem('theme') || 'light';
+    setTheme(savedTheme);
+});
+</script>
+<div class="main">
+    <header>
+        <nav>
+            <section class="navigation">
+                <div>
+                    <a href="assets/tsui-shelley-resume.pdf" class = "hover-underline-animation" target="_blank">Resume</a>
+                </div>
+                <div>
+                    <a href="mailto:tsuishelley@gmail.com" class = "hover-underline-animation">Email</a>
+                </div>
+                <div>
+                    <a href="/" class = "hover-underline-animation">Works</a>
+                </div>
+                <div>
+                    <button id="theme-toggle" class = "hover-underline-animation"><img src="assets/light-mode.svg"></button>
+                </div>
+            </section>
+        </nav>
+    </header>
         <h1 id="project-title">Developing the brand identity for a custom pet supplement company.</h1>
         <section class="project-section">
             <div class="project-copy">
