--- a/index.html
+++ b/index.html
@@ -53,24 +53,24 @@ document.addEventListener('DOMContentLoaded', function () {
 });
 </script>
 <div class="main">
-    <header>
-        <nav>
-            <section class="navigation">
-                <div>
-                    <a href="assets/tsui-shelley-resume.pdf" class = "hover-underline-animation" target="_blank">Resume</a>
-                </div>
-                <div>
-                    <a href="mailto:tsuishelley@gmail.com" class = "hover-underline-animation">Email</a>
-                </div>
-                <div>
-                    <a href="/" class = "hover-underline-animation">Works</a>
-                </div>
-                <div>
-                    <button id="theme-toggle" class = "hover-underline-animation"><img src="assets/light-mode.svg"></button>
-                </div>
-            </section>
-        </nav>
-    </header>
+  <header>
+    <nav>
+        <section class="navigation">
+            <div>
+                <a href="assets/tsui-shelley-resume.pdf" class = "hover-underline-animation" target="_blank">Resume</a>
+            </div>
+            <div>
+                <a href="about.html" class = "hover-underline-animation">About</a>
+            </div>
+            <div>
+                <a href="/" class = "hover-underline-animation">Works</a>
+            </div>
+            <div>
+                <button id="theme-toggle" class = "hover-underline-animation"><img src="assets/light-mode.svg"></button>
+            </div>
+        </section>
+    </nav>
+</header>
         <h1 id="intro" class="desktop">Hi there, I'm a user experience & visual designer based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. I'm versed in front-end development, design, and <a href="https://www.youtube.com/watch?v=z3U0udLH974" target="_blank" class="italic-blue" id="cats">cats</a>.</h1>
         <h1 id="intro" class="mobile">Nice to meet you, I'm a user experience & visual designer based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>.</h1>
         <section class="projects">
