--- a/caregoals.html
+++ b/caregoals.html
@@ -56,7 +56,7 @@ document.addEventListener('DOMContentLoaded', function () {
                     <a href="assets/tsui-shelley-resume.pdf" class = "hover-underline-animation" target="_blank">Resume</a>
                 </div>
                 <div>
-                    <a href="mailto:tsuishelley@gmail.com" class = "hover-underline-animation">Email</a>
+                    <a href="about.html" class = "hover-underline-animation">About</a>
                 </div>
                 <div>
                     <a href="/" class = "hover-underline-animation">Works</a>
