--- a/about.html
+++ b/about.html
@@ -87,10 +87,9 @@ document.addEventListener('DOMContentLoaded', function () {
             <p>UX Research</p>
         </div>
         <div class="column">
-            <p class="gray">Select Clients</p>
+            <p class="gray">Clients</p>
             <p>Microsoft</p>
             <p>Amazon</p>
-            <p>Promethean</p>
             <p>Google</p>
             <p>Curious VC</p>
         </div>
@@ -103,9 +102,9 @@ document.addEventListener('DOMContentLoaded', function () {
         </div>
         <div class="column">
             <p class="gray">Favorites</p>
-            <p>My favorite video game is Fallout New Vegas.</p>
-            <p>My favorite cake is chiffon cake.</p>
-            <p>My favorite pet is [redacted].</p>
+            <p>Fallout New Vegas.</p>
+            <p>Chiffon cake.</p>
+            <p>Heavy snow</p>
         </div>
     </div>
       <footer>
