updated about page

--- a/about.html
+++ b/about.html
@@ -74,8 +74,7 @@ document.addEventListener('DOMContentLoaded', function () {
         <h1 id="intro">Thanks for stopping by!</h1>
         <p id="about">I graduated from the University of Washington with a Bachelor of Design in visual communication and a minor in informatics. Some clients I've worked with include Microsoft, Google, Amazon, and Promethean. My favorite feeling is being able to use design (and more recently, development) to legitimize ideas and make things come to life.
             <br><br>
-            Outside of work, you can catch me getting lost in video games, attempting (with mixed success) to bake treats that won't set off the fire alarm, and hanging out with my loving pets. Most recently I’ve obtained my certificate in front-end development. Right now I’m looking for my next opportunity in visual and or UX design.
-            <br><br>
+            Outside of work, you can catch me getting lost in video games, attempting (with mixed success) to bake treats that won't set off the fire alarm, and hanging out with my loving pets. Most recently I’ve obtained my certificate in front-end development as a complement to my design skills. Right now I’m freelancing and also looking for my next opportunity in visual and or UX design.
             Feel free to reach out for any reason! I’m always happy to talk over a nice cup of coffee.</p>
     </div>
     <div class="about-details">
@@ -102,9 +101,10 @@ document.addEventListener('DOMContentLoaded', function () {
         </div>
         <div class="column">
             <p class="gray">Favorites</p>
-            <p>Fallout New Vegas.</p>
-            <p>Chiffon cake.</p>
-            <p>Heavy snow</p>
+            <p>Fallout New Vegas</p>
+            <p>Chiffon cake</p>
+            <p>The quiet when it snows</p>
+            <p>Holding cats like babies</p>
         </div>
     </div>
       <footer>
