--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@ document.addEventListener('DOMContentLoaded', function () {
         </div>
         <div class="column">
             <p class="gray">Likes</p>
-            <p>Ladyfingers by Herb Alpert and the Tijuana Brass</p>
+            <p>Ladyfingers by Herb Alpert and The Tijuana Brass</p>
             <p>#377EF7 (the blue on my site)</p>
             <p>Improving my Cantonese</p>
 
