--- a/about.html
+++ b/about.html
@@ -94,16 +94,16 @@ document.addEventListener('DOMContentLoaded', function () {
         </div>
         <div class="column">
             <p class="gray">Likes</p>
-            <p>Ladyfingers by Herb Alpert and The Tijuana Brass</p>
-            <p>#377EF7 (the blue on my site)</p>
-            <p>Improving my Cantonese</p>
+            <p>"Tripawds"</p>
+            <p>#377EF7</p>
+            <p>Learning Cantonese</p>
 
         </div>
         <div class="column">
             <p class="gray">Favorites</p>
             <p>Fallout New Vegas</p>
             <p>Chiffon cake</p>
-            <p>The quiet when it snows</p>
+            <p>When it snows</p>
             <p>Holding cats like babies</p>
         </div>
     </div>
