--- a/about.html
+++ b/about.html
@@ -72,10 +72,9 @@ document.addEventListener('DOMContentLoaded', function () {
         </nav>
     </header>
         <h1 id="intro">Thanks for stopping by!</h1>
-        <p id="about">I graduated from the University of Washington with a Bachelor of Design in visual communication and a minor in informatics. Some clients I've worked with include Microsoft, Google, Amazon, and Promethean. My favorite feeling is being able to use design (and more recently, development) to legitimize ideas and make things come to life.
+        <p id="about">I graduated from the University of Washington with a Bachelor of Design in visual communication and a minor in informatics. During my career I’ve been fortunate enough to to collaborate with large tech companies to small Y-Combinator startups. It’s through collaborating with a wide range of clients that I’ve learned to create truly bespoke experiences is to acknowledge the process as fluid, never fixed. My favorite feeling is being able to use design to legitimize ideas and make things come to life.
             <br><br>
-            Outside of work, you can catch me getting lost in video games, attempting (with mixed success) to bake treats that won't set off the fire alarm, and hanging out with my loving pets. Most recently I’ve obtained my certificate in front-end development as a complement to my design skills. Right now I’m freelancing and also looking for my next opportunity in visual and or UX design.
-            Feel free to reach out for any reason! I’m always happy to talk over a nice cup of coffee.</p>
+            Most recently I’ve obtained my certificate in front-end development as a complement to my design skills. Right now I’m freelancing, working on my own front-end passion projects, and looking for my next opportunity in visual and or UX design.</p>
     </div>
     <div class="about-details">
         <div class="column">
