--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@ document.addEventListener('DOMContentLoaded', function () {
         </div>
         <div class="column">
             <p class="gray">Likes</p>
-            <p>"Tripawds"</p>
+            <p>My tripawds</p>
             <p>#377EF7</p>
             <p>Learning Cantonese</p>
 
@@ -103,7 +103,7 @@ document.addEventListener('DOMContentLoaded', function () {
             <p>Fallout New Vegas</p>
             <p>Chiffon cake</p>
             <p>When it snows</p>
-            <p>Holding cats like babies</p>
+            <p>Fluffy cats</p>
         </div>
     </div>
       <footer>
