--- a/antologi.html
+++ b/antologi.html
@@ -99,20 +99,20 @@ document.addEventListener('DOMContentLoaded', function () {
         <div class="ticker-wrap">
             <div class="ticker">
               <span class="item-collection-1">
-                <span class="item">Coded & designed with ♥</span>
-                <span class="item">Coded & designed with ♥</span>
-                <span class="item">Coded & designed with ♥</span>
-                <span class="item">Coded & designed with ♥</span>
-                <span class="item">Coded & designed with ♥</span>
-                <span class="item">Coded & designed with ♥</span>
-            </span>
+                <span class="item">Coded & designed with love</span>
+                <span class="item">Coded & designed with love</span>
+                <span class="item">Coded & designed with love</span>
+                <span class="item">Coded & designed with love</span>
+                <span class="item">Coded & designed with love</span>
+                <span class="item">Coded & designed with love</span>
+              </span>
               <span class="item-collection-2">
-                <span class="item">Coded & designed with ♥</span>
-                <span class="item">Coded & designed with ♥</span>
-                <span class="item">Coded & designed with ♥</span>
-                <span class="item">Coded & designed with ♥</span>
-                <span class="item">Coded & designed with ♥</span>
-                <span class="item">Coded & designed with ♥</span>
+                <span class="item">Coded & designed with love</span>
+                <span class="item">Coded & designed with love</span>
+                <span class="item">Coded & designed with love</span>
+                <span class="item">Coded & designed with love</span>
+                <span class="item">Coded & designed with love</span>
+                <span class="item">Coded & designed with love</span>
             </span>
             </div>
           <div>
