--- a/index.html
+++ b/index.html
@@ -171,20 +171,20 @@ document.addEventListener('DOMContentLoaded', function () {
       <div class="ticker-wrap">
         <div class="ticker">
           <span class="item-collection-1">
-            <span class="item">Coded & designed with ♥</span>
-            <span class="item">Coded & designed with ♥</span>
-            <span class="item">Coded & designed with ♥</span>
-            <span class="item">Coded & designed with ♥</span>
-            <span class="item">Coded & designed with ♥</span>
-            <span class="item">Coded & designed with ♥</span>
+            <span class="item">Coded & designed with love</span>
+            <span class="item">Coded & designed with love</span>
+            <span class="item">Coded & designed with love</span>
+            <span class="item">Coded & designed with love</span>
+            <span class="item">Coded & designed with love</span>
+            <span class="item">Coded & designed with love</span>
           </span>
           <span class="item-collection-2">
-            <span class="item">Coded & designed with ♥</span>
-            <span class="item">Coded & designed with ♥</span>
-            <span class="item">Coded & designed with ♥</span>
-            <span class="item">Coded & designed with ♥</span>
-            <span class="item">Coded & designed with ♥</span>
-            <span class="item">Coded & designed with ♥</span>
+            <span class="item">Coded & designed with love</span>
+            <span class="item">Coded & designed with love</span>
+            <span class="item">Coded & designed with love</span>
+            <span class="item">Coded & designed with love</span>
+            <span class="item">Coded & designed with love</span>
+            <span class="item">Coded & designed with love</span>
           </span>
         </div>
       <div>
