--- a/acnh.html
+++ b/acnh.html
@@ -9,6 +9,15 @@
         <meta property="og:image" content="https://raw.githubusercontent.com/tsuishelley/portfolio/main/images/og-image.png"/>
 
     </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L95KC35WE5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L95KC35WE5');
+</script>
     <body>
         <script>
             document.addEventListener('DOMContentLoaded', function () {
