--- a/milo.html
+++ b/milo.html
@@ -8,6 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="https://raw.githubusercontent.com/tsuishelley/portfolio/main/images/og-image.png"/>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L95KC35WE5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L95KC35WE5');
+</script>
 <body>
 <script>
 document.addEventListener('DOMContentLoaded', function () {
