updated dark mode line

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@ document.addEventListener('DOMContentLoaded', function () {
         </nav>
     </header>
         <h1 id="intro">Thanks for stopping by!</h1>
-        <p id="about">I graduated from the University of Washington with a Bachelor of Design in visual communication and a minor in informatics. During my career I’ve been fortunate enough to to collaborate with large tech companies to small Y-Combinator startups. It’s through collaborating with a wide range of clients that I’ve learned to create truly bespoke experiences is to acknowledge the process as fluid, never fixed. My favorite feeling is being able to use design to legitimize ideas and make things come to life.
+        <p id="about">I graduated from the University of Washington with a Bachelor of Design in visual communication and a minor in informatics. During my career I’ve been fortunate enough to collaborate with a wide range of clientele. It’s through this collaboration that I’ve learned to create truly bespoke experiences is to acknowledge the process as fluid, never fixed. My favorite feeling is being able to use design to legitimize ideas and make things come to life.
             <br><br>
             Most recently I’ve obtained my certificate in front-end development as a complement to my design skills. Right now I’m freelancing, working on my own front-end passion projects, and looking for my next opportunity in visual and or UX design.</p>
     </div>
@@ -108,7 +108,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
         </div>
         <div class="column">
-            <p class="gray">Favorites</p>
+            <p class="gray">Likes p.2</p>
             <p>Fallout New Vegas</p>
             <p>Chiffon cake</p>
             <p>When it snows</p>
